# hawkeye-collector

./: Cargo.toml  build.rs
proto/: hawkeye_collector.proto
src/: config.rs  lib.rs  main.rs  polling.rs  rest.rs  service.rs  storage.rs
src/storage/: memory.rs
