[package]
name = "hawkeye-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
hawkeye = { git = "https://github.com/musergi/hawkeyed.git" }
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
log = "0.4"
simple_logger = "4.0"
tonic = "0.8"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
warp = "0.3.3"

[build-dependencies]
tonic-build = "0.8"
